--- a/index.html
+++ b/index.html
@@ -1083,7 +1083,42 @@
         </main><!-- .main end -->
 
         <footer class="footer">
+            <div class="content_wrap">
+                <div class="left">
+                    <img src="img/logo.svg" alt="로고" class="logo">
+                    <div class="info">
+                        <a href="#">이용약관</a>
+                        <a href="#">개인정보 처리방침</a>
+                        <a href="#">회사소개</a>
+                    </div><!-- .info end -->
+                    <div class="sns">
+                        <a href="#">
+                            <img src="img/youtube.svg" alt="youtube">
+                        </a>
+                        <a href="#">
+                            <img src="img/instagram.svg" alt="instagram">
+                        </a>
+                        <a href="#">
+                            <img src="img/facebook.svg" alt="facebook">
+                        </a>
+                        <a href="#">
+                            <img src="img/kakao.svg" alt="kakao">
+                        </a>
+                        <a href="#">
+                            <img src="img/naver.svg" alt="naver">
+                        </a>
+                    </div><!-- .sns end -->
+                    <div class="copyright">
+                        <p>Copyright 2014. bucketplace, Co., Ltd. All rights reserved.</p>
+                    </div><!-- .copyright end -->
+                </div><!-- .left end -->
 
+                <div class="right">
+                    <strong>고객센터</strong>
+                    <p class="number">1670-0876</p>
+                    <span class="time">평일 09:00 - 18:00</span>
+                </div><!-- .right end -->
+            </div><!-- .content_wrap end -->
         </footer><!-- .footer end -->
 
     </div><!-- #wrap end -->
