--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </button><!-- .menu end -->
                     </div><!-- .category end -->
                     <ul class="gnb">
-                        <li>
+                        <li class="active">
                             <a href="#" class="depth-01">홈</a>
                             <ul class="depth-02">
                                 <li><a href="#">홈</a></li>
